--- a/css/articulo.css
+++ b/css/articulo.css
@@ -37,9 +37,15 @@ ul{
 }
 
 .bg-image{
-    background-image: url('../img/putin.jpg');
+    /* background-image: url('../img/putin.jpg'); */
     background-size: cover;
     background-position: center;
     width: 100%;
     height: 50vh;
+}
+.creditos{
+    margin-top: 15px;
+}
+.fecha{
+    font-size: 12px;
 }
