--- a/css/fontello-codes.css
+++ b/css/fontello-codes.css
@@ -5,6 +5,7 @@
 .icon-mail:before { content: '\e803'; } /* '' */
 .icon-up-dir:before { content: '\e804'; } /* '' */
 .icon-user:before { content: '\e805'; } /* '' */
+.icon-glasses:before { content: '\e806'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-youtube-play:before { content: '\f16a'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
