--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?86659916');
-  src: url('../font/fontello.eot?86659916#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?86659916') format('woff2'),
-       url('../font/fontello.woff?86659916') format('woff'),
-       url('../font/fontello.ttf?86659916') format('truetype'),
-       url('../font/fontello.svg?86659916#fontello') format('svg');
+  src: url('../font/fontello.eot?85158754');
+  src: url('../font/fontello.eot?85158754#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?85158754') format('woff2'),
+       url('../font/fontello.woff?85158754') format('woff'),
+       url('../font/fontello.ttf?85158754') format('truetype'),
+       url('../font/fontello.svg?85158754#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?86659916#fontello') format('svg');
+    src: url('../font/fontello.svg?85158754#fontello') format('svg');
   }
 }
 */
@@ -60,6 +60,7 @@
 .icon-mail:before { content: '\e803'; } /* '' */
 .icon-up-dir:before { content: '\e804'; } /* '' */
 .icon-user:before { content: '\e805'; } /* '' */
+.icon-glasses:before { content: '\e806'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-youtube-play:before { content: '\f16a'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
