--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,9 @@ a {
     text-decoration: none !important;
 }
 
-footer {
-    /* margin-top: 25px; */
-}
+/* footer {
+    margin-top: 25px; 
+} */
 
 /* Sign in */
 .login {
@@ -43,4 +43,4 @@ footer {
     padding: 0.75rem 1rem;
   }
 
- 
+ /* Media Queries */
