--- a/css/escribir.css
+++ b/css/escribir.css
@@ -18,3 +18,11 @@ a {
     text-decoration: none !important;
 }
 
+.titulo-web{
+    font-weight: 900;
+    color: linear-gradient(to right, #bdc3c7, #2c3e50);;
+    background: rgb(162,39,51);
+    background: linear-gradient(90deg, rgba(162,39,51,1) 0%, rgba(220,53,69,1) 35%, rgba(223,161,167,1) 100%);
+    border-radius: 0.5rem;
+    padding: 1rem;
+}
