--- a/css/escribir.css
+++ b/css/escribir.css
@@ -20,9 +20,9 @@ a {
 
 .titulo-web{
     font-weight: 900;
-    color: linear-gradient(to right, #bdc3c7, #2c3e50);;
-    background: rgb(162,39,51);
-    background: linear-gradient(90deg, rgba(162,39,51,1) 0%, rgba(220,53,69,1) 35%, rgba(223,161,167,1) 100%);
+    text-shadow:  2px 2px 2px #bdb8b885;
+    color: rgb(39, 39, 39);
+    background: #eb4555;
     border-radius: 0.5rem;
     padding: 1rem;
 }
