--- a/CaosNews/webcaosnews/templates/index.html
+++ b/CaosNews/webcaosnews/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -5,20 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Caos News</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/fontello.css">
+  <link rel="stylesheet" href="{% static 'css/fontello.css' %}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gcom" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
-  <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
-  <link rel="manifest" href="../favicon/site.webmanifest">
-  <link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="{% static '../favicon/apple-touch-icon.png' %}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static '../favicon/favicon-32x32.png'}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static '../favicon/favicon-16x16.png' %}">
+  <link rel="manifest" href="{% static '../favicon/site.webmanifest' %}">
+  <link rel="mask-icon" href="{% static '../favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 </head>
@@ -37,10 +38,10 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Inicio</a>
+            <a class="nav-link" aria-current="page" href="{% url 'indx' %}">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="web/contacto.html">Contacto</a>
+            <a class="nav-link" href="{% url 'cont' %}">Contacto</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -48,10 +49,10 @@
               Categorías
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="web/nacional.html">Nacional</a></li>
-              <li><a class="dropdown-item" href="web/mundo.html">Mundo</a></li>
-              <li><a class="dropdown-item" href="web/deportes.html">Deportes</a></li>
-              <li><a class="dropdown-item" href="web/Politica.html">Política</a></li>
+              <li><a class="dropdown-item" href="{% url 'nac' %}">Nacional</a></li>
+              <li><a class="dropdown-item" href="{% url 'mun' %}">Mundo</a></li>
+              <li><a class="dropdown-item" href="{% url 'dep' %}">Deportes</a></li>
+              <li><a class="dropdown-item" href="{% url 'pol' %}">Política</a></li>
             </ul>
           </li>
         </ul>
@@ -59,7 +60,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" id="iniciarSesion" href="web/login.html"><i class="icon-user"></i> Iniciar Sesión</a>
+            <a class="nav-link" id="iniciarSesion" href="{% url 'log' %}"><i class="icon-user"></i> Iniciar Sesión</a>
           </li>
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Buscar...." aria-label="Search">
@@ -83,19 +84,19 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <a href="web/mundo.html"><img src="img/putin.jpg" class="d-block w-100" alt="..."></a>
+              <a href="{% url 'mun' %}"><img src="{% static 'img/putin.jpg' %}" class="d-block w-100" alt="..."></a>
               <div class="carousel-caption d-none d-md-block">
                 <h5 class="text-danger fs-4 fw-bold shadow-lg p-3 mb-5 bg-body rounded">¿Quiénes son y por qué sancionaron a las hijas de Vladimir Putin?</h5> 
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/accidente.jpg" class="d-block w-100" alt="...">
+              <img src="{% static 'img/accidente.jpg' %}" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5 class="text-danger fs-4 fw-bold shadow-lg p-3 mb-5 bg-body rounded">Joven hallado muerto en Coronel: Esto es lo que se sabe del caso y las pistas que permitieron encontrar su cuerpo</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/caso.jpg" class="d-block w-100" alt="...">
+              <img src="{% static 'img/caso.jpg' %}" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5 class="text-danger fs-4 fw-bold shadow-lg p-3 mb-5 bg-body rounded">Second slide label</h5>
               </div>
@@ -122,18 +123,18 @@
     <div class="row justify-content-center" style="padding-top: 20px; padding-bottom: 50px; margin-left: 5%; margin-right: 5%;"">
       <div class="col-12 col-sm-6 col-lg-4">
         <div class="card" style="width: 20rem;">
-          <img src="img/accidente.jpg" class="card-img-top" alt="...">
+          <img src="{% static 'img/accidente.jpg' %}" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Joven hallado muerto en Coronel <span class="badge bg-primary">Tendencia</span></h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="web/nacional.html" class="btn btn-primary">Ver más</a>
+            <a href="{% url 'nac' %}" class="btn btn-primary">Ver más</a>
           </div>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-lg-4">
         <div class="card" style="width: 20rem;">
-          <img src="img/politico.jpg" class="card-img-top" alt="...">
+          <img src="{% static 'img/politico.jpg' %}" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -144,7 +145,7 @@
       </div>
       <div class="col-12 col-sm-6 col-lg-4">
         <div class="card" style="width: 20rem;">
-          <img src="img/pan y carnes.jpg" class="card-img-top" alt="...">
+          <img src="{% static 'img/pan y carnes.jpg' %}" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -163,7 +164,7 @@
         <div class="card" style="max-width: 100%;">
           <div class="row g-0">
             <div class="col-sm-5">
-              <img src="img/deportes.jpg" class="img-fluid rounded-start" alt="...">
+              <img src="{% static 'img/deportes.jpg' %}" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-sm-7">
               <div class="card-body">
@@ -172,7 +173,7 @@
                 <p class="card-text text-justify">Universidad Católica cerró una semana para el olvido este sábado al
                   caer en condición de local por 0-2 ante Deportes La Serena, en partido jugado en San Carlos de
                   Apoquindo y correspondiente a la novena fecha del Campeonato Nacional 2022.</p>
-                <a href="#" class="btn btn-primary stretched-link">Ver más</a>
+                <a href="{% url 'dep' %}" class="btn btn-primary stretched-link">Ver más</a>
               </div>
             </div>
           </div>
@@ -222,16 +223,16 @@
               Secciones
             </h6>
             <p>
-              <a href="#!" class="text-reset">Nacional</a>
+              <a href="{% url 'nac' %}" class="text-reset">Nacional</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Mundo</a>
+              <a href="{% url 'mun' %}"class="text-reset">Mundo</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Política</a>
+              <a href="{% url 'pol' %}"class="text-reset">Política</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Deporte</a>
+              <a href="{% url 'dep' %}" class="text-reset">Deportes</a>
             </p>
           </div>
 
@@ -286,7 +287,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <script src="js/script.js"></script>
+  <script src="{% static 'js/script.js' %}"></script>
 </body>
 
 </html>
