--- a/CaosNews/webcaosnews/templates/nacional.html
+++ b/CaosNews/webcaosnews/templates/nacional.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 
@@ -10,21 +11,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="../css/style.css"> -->
-    <link rel="stylesheet" href="../css/articulo.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/articulo.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/fontello.css">
+    <link rel="stylesheet" href="{% static 'css/fontello.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gcom" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="../img/favicon/site.webmanifest">
-    <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static '../favicon/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static '../favicon/favicon-32x32.png'}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static '../favicon/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static '../favicon/site.webmanifest' %}">
+    <link rel="mask-icon" href="{% static '../favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -43,10 +46,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="{% url 'indx' %}">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../web/contacto.html">Contacto</a>
+                        <a class="nav-link" href="{% url 'cont' %}">Contacto</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -54,10 +57,10 @@
                             Categorías
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Nacional</a></li>
-                            <li><a class="dropdown-item" href="mundo.html">Mundo</a></li>
-                            <li><a class="dropdown-item" href="deportes.html">Deportes</a></li>
-                            <li><a class="dropdown-item" href="Politica.html">Política</a></li>
+                            <li><a class="dropdown-item" href="{% url 'nac' %}">Nacional</a></li>
+                            <li><a class="dropdown-item" href="{% url 'mun' %}">Mundo</a></li>
+                            <li><a class="dropdown-item" href="{% url 'dep' %}">Deportes</a></li>
+                            <li><a class="dropdown-item" href="{% url 'pol' %}">Política</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -65,7 +68,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" id="iniciarSesion" href="login.html"><i class="icon-user"></i> Iniciar
+                        <a class="nav-link" id="iniciarSesion" href="{% url 'log' %}"><i class="icon-user"></i> Iniciar
                             Sesión</a>
                     </li>
                     <form class="d-flex">
@@ -75,17 +78,16 @@
                 </ul>
             </div>
     </nav>
-
     <!-- Contenido -->
     <div class="container" style="margin-top: 15px;">
         <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);"
             aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="../index.html">Inicio</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'indx' %}">Inicio</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Nacional</li>
             </ol>
         </nav>
-        <div class="bg-image" style="background-image: url(../img/accidente.jpg);">
+        <div class="bg-image" style="background-image: url(../static/img/accidente.jpg);">
         </div>
         <div class="container">
             <div id="article">
@@ -93,7 +95,8 @@
                     <div class="col-sm-6 col-md-8">
                         <ul class="nav">
                             <li class="nav-item">
-                                <a class="nav-link active fw-bold" aria-current="page" href="#">Nacional</a>
+                                <a class="nav-link active fw-bold" aria-current="page"
+                                    href="{% url 'nac' %}">Nacional</a>
                             </li>
                         </ul>
                         <h1 class="mb-3 h2 text-center fw-bolder text-danger">Joven hallado muerto en Coronel: Esto es
@@ -135,7 +138,7 @@
                                 <h5 class="card-title">Te puede interesar</h5>
                                 <p class="card-text"><span class="fw-bold text-dark">&raquo;</span> Una apática
                                     Universidad Católica cayó en San Carlos ante Deportes La Serena</p>
-                                <a href="deportes.html" class="btn btn-primary">Ver más</a>
+                                <a href="{% url 'dep' %}" class="btn btn-primary">Ver más</a>
                             </div>
                         </div>
                     </div>
@@ -239,16 +242,16 @@
                             Secciones
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Nacional</a>
+                            <a href="{% url 'nac' %}" class="text-reset">Nacional</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Mundo</a>
+                            <a href="{% url 'mun' %}" class="text-reset">Mundo</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Política</a>
+                            <a href="{% url 'pol' %}" class="text-reset">Política</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Deporte</a>
+                            <a href="{% url 'dep' %}" class="text-reset">Deportes</a>
                         </p>
                     </div>
 
@@ -270,7 +273,6 @@
                             <a href="#!" class="text-reset">Coronavirus</a>
                         </p>
                     </div>
-
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <!-- Contacto -->
                         <h6 class="text-uppercase fw-bold mb-4">
@@ -287,27 +289,16 @@
                 </div>
             </div>
         </section>
-
-
         <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
             &copy 2022 Copyright: DUOC UC Puente Alto PGY3121-008D
         </div>
-
     </footer>
     <!-- Footer -->
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="../js/script.js"></script>
-</body>
-
-</html>
-
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 
 </html>
