--- a/CaosNews/webcaosnews/static/css/terms.css
+++ b/CaosNews/webcaosnews/static/css/terms.css
@@ -11,3 +11,11 @@
 a {
     text-decoration: none !important;
 }
+
+#iniciarSesion {
+    margin-right: 15px;
+}
+
+body{
+    font-family: "Fira Sans", sans-serif;
+}
