--- a/CaosNews/webcaosnews/templates/signup.html
+++ b/CaosNews/webcaosnews/templates/signup.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 
@@ -9,21 +10,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="../css/style.css"> -->
-    <link rel="stylesheet" href="../css/signup.css">
+    <link rel="stylesheet" href="{% static 'css/signup.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/fontello.css">
+    <link rel="stylesheet" href="{% static 'css/fontello.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gcom" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="../img/favicon/site.webmanifest">
-    <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static '../favicon/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static '../favicon/favicon-32x32.png'}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static '../favicon/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static '../favicon/site.webmanifest' %}">
+    <link rel="mask-icon" href="{% static '../favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -42,10 +42,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="{% url 'indx' %}">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../web/contacto.html">Contacto</a>
+                        <a class="nav-link" href="{% url 'cont' %}">Contacto</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -53,10 +53,10 @@
                             Categorías
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="nacional.html">Nacional</a></li>
-                            <li><a class="dropdown-item" href="mundo.html">Mundo</a></li>
-                            <li><a class="dropdown-item" href="deportes.html">Deportes</a></li>
-                            <li><a class="dropdown-item" href="Politica.html">Política</a></li>
+                            <li><a class="dropdown-item" href="{% url 'nac' %}">Nacional</a></li>
+                            <li><a class="dropdown-item" href="{% url 'mun' %}">Mundo</a></li>
+                            <li><a class="dropdown-item" href="{% url 'dep' %}">Deportes</a></li>
+                            <li><a class="dropdown-item" href="{% url 'pol' %}">Política</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -64,7 +64,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" id="iniciarSesion" href="login.html"><i class="icon-user"></i> Iniciar
+                        <a class="nav-link" id="iniciarSesion" href="{% url 'log' %}"><i class="icon-user"></i> Iniciar
                             Sesión</a>
                     </li>
                     <form class="d-flex">
@@ -74,7 +74,6 @@
                 </ul>
             </div>
     </nav>
-
     <!-- Formulario -->
     <div class="container-fluid ps-md-0">
         <div class="row g-0">
@@ -141,7 +140,8 @@
                                             <input class="form-check-input" type="checkbox" value="" id="invalidCheck2"
                                                 required>
                                             <label class="form-check-label" for="invalidCheck2">
-                                                Acepto las <a href="/web/terms.html">Condiciones del servicio y Política
+                                                Acepto las <a href="{% url 'terms' %}">Condiciones del servicio y
+                                                    Política
                                                     de privacidad</a> de Caos News
                                             </label>
                                         </div>
@@ -150,7 +150,8 @@
                                                 type="submit">Registrarse</button>
                                         </div>
 
-                                        <p class="d-block text-center mt-2 small">¿Tienes una cuenta? <a href="login.html">Inicia
+                                        <p class="d-block text-center mt-2 small">¿Tienes una cuenta? <a
+                                                href="{% url 'log' %}">Inicia
                                                 Sesión</a></p>
 
                                         <hr class="my-4">
@@ -178,7 +179,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="text-center text-lg-start text-dark bg-danger">
+    <footer class="text-center text-lg-start text-dark bg-danger mt-auto">
         <!--Social media -->
         <section class="d-flex justify-content-center justify-content-end p-4 border-bottom border-dark">
             <div class="me- d-none d-lg-block">
@@ -209,7 +210,8 @@
                         </h6>
                         <p>
                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima tenetur odio, iure, libero
-                            provident magni incidunt, repudiandae totam sit.
+                            provident
+                            magni incidunt, repudiandae totam sit.
                         </p>
                         <a href="#top" class="text-reset fs-6 fw-light">Volver Arriba <i class="icon-up-dir"></i></a>
                     </div>
@@ -219,16 +221,16 @@
                             Secciones
                         </h6>
                         <p>
-                            <a href="#!" class="text-reset">Nacional</a>
+                            <a href="{% url 'nac' %}" class="text-reset">Nacional</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Mundo</a>
+                            <a href="{% url 'mun' %}" class="text-reset">Mundo</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Política</a>
+                            <a href="{% url 'pol' %}" class="text-reset">Política</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Deporte</a>
+                            <a href="{% url 'dep' %}" class="text-reset">Deportes</a>
                         </p>
                     </div>
 
@@ -250,7 +252,6 @@
                             <a href="#!" class="text-reset">Coronavirus</a>
                         </p>
                     </div>
-
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <!-- Contacto -->
                         <h6 class="text-uppercase fw-bold mb-4">
@@ -267,19 +268,16 @@
                 </div>
             </div>
         </section>
-
-
         <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
             &copy 2022 Copyright: DUOC UC Puente Alto PGY3121-008D
         </div>
-
     </footer>
     <!-- Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="../js/script.js"></script>
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 
 </html>
