se añade favicon

--- a/CaosNews/webcaosnews/templates/escribir.html
+++ b/CaosNews/webcaosnews/templates/escribir.html
@@ -22,11 +22,11 @@
     <!-- Tiny MC -->
     <script src="https://cdn.tiny.cloud/1/8l8m0j6ztkpaf38bwic7ipvi8ioyez7mb801f53jk8ik7ygw/tinymce/6/tinymce.min.js"
         referrerpolicy="origin"></script>
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static '../favicon/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static '../favicon/favicon-32x32.png'}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static '../favicon/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static '../favicon/site.webmanifest' %}">
-    <link rel="mask-icon" href="{% static '../favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon/favicon-32x32.png'}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'img/favicon/site.webmanifest' %}">
+    <link rel="mask-icon" href="{% static 'img/favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -154,8 +154,8 @@
         </div>
     </div>
     <!-- Fin modal -->
-      <!-- Footer -->
-      <footer class="text-center text-lg-start text-dark bg-danger mt-auto">
+    <!-- Footer -->
+    <footer class="text-center text-lg-start text-dark bg-danger mt-auto">
         <!--Social media -->
         <section class="d-flex justify-content-center justify-content-end p-4 border-bottom border-dark">
             <div class="me- d-none d-lg-block">
@@ -256,4 +256,5 @@
     <script src="{% static 'js/escribir.js' %}"></script>
 
 </body>
+
 </html>
