--- a/CaosNews/webcaosnews/templates/mundo.html
+++ b/CaosNews/webcaosnews/templates/mundo.html
@@ -13,17 +13,17 @@
     <link rel="stylesheet" href="{% static 'css/articulo.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static '../css/fontello.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fontello.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gcom" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static '../favicon/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static '../favicon/favicon-32x32.png'}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static '../favicon/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static '../favicon/site.webmanifest' %}">
-    <link rel="mask-icon" href="{% static '../favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon/favicon-32x32.png'}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'img/favicon/site.webmanifest' %}">
+    <link rel="mask-icon" href="{% static 'img/favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -304,4 +304,5 @@
         crossorigin="anonymous"></script>
     <script src="{% static '..js/script.js' %}"></script>
 </body>
+
 </html>
