--- a/CaosNews/webcaosnews/templates/signup.html
+++ b/CaosNews/webcaosnews/templates/signup.html
@@ -153,12 +153,10 @@ Registrarse - Caos News
                                     <hr class="my-4">
 
                                     <div class="d-grid mb-2">
-                                        <button
-                                            class="btn btn-lg btn-google btn-login fw-bold text-uppercase text-decoration-none"
-                                            type="submit">
+                                        <button class="btn btn-lg btn-google btn-login fw-bold text-uppercase text-decoration-none" type="submit" style="color: white;">
                                             <i class="icon-google me-2"></i><a
-                                                href="{% provider_login_url 'google' method = 'oauth2' %}"
-                                                class="">Entrar Con Google</a>
+                                                href="{% provider_login_url 'google' method = 'oauth2' %}" style="color: white;"
+                                                >Entrar Con Google</a>
                                         </button>
                                     </div>
                             </form>
