--- a/CaosNews/webcaosnews/templates/base.html
+++ b/CaosNews/webcaosnews/templates/base.html
@@ -23,7 +23,7 @@
 
   {% endblock script %}
   <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon/apple-touch-icon.png' %}">
-  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon/favicon-32x32.png'}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon/favicon-32x32.png' %}">
   <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon/favicon-16x16.png' %}">
   <link rel="manifest" href="{% static 'img/favicon/site.webmanifest' %}">
   <link rel="mask-icon" href="{% static 'img/favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
@@ -99,7 +99,7 @@
   </nav>
   <!-- Contenido -->
   {% block contenido %}
-
+  
   {% endblock contenido %}
   <!-- Footer -->
   <footer class="text-center text-lg-start text-dark bg-danger mt-auto">
