Actualización de base de datos

--- a/CaosNews/webcaosnews/templates/base.html
+++ b/CaosNews/webcaosnews/templates/base.html
@@ -77,7 +77,7 @@
                 {{user.first_name}}
               </button>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item active" href="#">Panel</a></li>
+                <li><a class="dropdown-item active" href="{% url 'panel' %}">Panel</a></li>
                 <li><a class="dropdown-item" href="#">Configuración</a></li>
                 <li>
                   <hr class="dropdown-divider">
